--- a/MyAPP/src/app/home/home.page.html
+++ b/MyAPP/src/app/home/home.page.html
@@ -23,14 +23,14 @@
       <ion-card-content>
         <ion-list>
           <ion-item>
-            <ion-input label="Usuario" labelPlacement="floating"
+            <ion-input [(ngModel)]="user.username" label="Usuario" labelPlacement="floating"
               placeholder="Ingrese su usuario"></ion-input>
           </ion-item>
           <ion-item>
-            <ion-input label="Contraseña" type="password" labelPlacement="floating"
+            <ion-input [(ngModel)]="user.password" label="Contraseña" type="password" labelPlacement="floating"
               placeholder="Ingrese su contraseña"></ion-input>
           </ion-item>
-          <ion-button>Ingresar</ion-button>
+          <ion-button (click)="validar()">Ingresar</ion-button>
         </ion-list>
       </ion-card-content>
 
