--- a/MyAPP/src/app/home/home.page.html
+++ b/MyAPP/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      TeLlevoAPP
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,7 +9,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">TeLlevoAPP</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -17,20 +17,26 @@
     <ion-card>
       <ion-card-header>
         <ion-card-title>Login</ion-card-title>
-        <ion-card-subtitle>¡Bienvenido!</ion-card-subtitle>
+        <ion-card-subtitle>¡Bienvenid&#64;!</ion-card-subtitle>
       </ion-card-header>
     
       <ion-card-content>
-        <ion-list>
+        <ion-list style="border-radius: 12px;">
           <ion-item>
-            <ion-input [(ngModel)]="user.username" label="Usuario" labelPlacement="floating"
-              placeholder="Ingrese su usuario"></ion-input>
+            <ion-input label="Usuario" [(ngModel)]="user.username" labelPlacement="floating" placeholder="Ingrese su usuario"></ion-input>
           </ion-item>
           <ion-item>
-            <ion-input [(ngModel)]="user.password" label="Contraseña" type="password" labelPlacement="floating"
-              placeholder="Ingrese su contraseña"></ion-input>
+            <ion-input label="Contraseña" [(ngModel)]="user.password" labelPlacement="floating" placeholder="Ingrese su contraseña" type="password"></ion-input>
           </ion-item>
-          <ion-button (click)="validar()">Ingresar</ion-button>
+            <div style="display: flex; justify-content: center; margin-top: 10px; margin-bottom: 10px;">
+              <p style="text-align: center;justify-content: center;font-size: small; color: red;">{{mensaje}}</p>
+            </div>
+          <div style="display: flex; justify-content: center; margin-top: 10px; margin-bottom: 10px;">
+            <ion-button (click)="validar()">Ingresar</ion-button>
+          </div>
+          <div style="display: flex; justify-content: center; margin-top: 10px; margin-bottom: 10px;">
+            <a style="text-align: center; text-decoration: underline;justify-content: center;font-size: small;">¿Olvidó su contraseña?</a>
+          </div>
         </ion-list>
       </ion-card-content>
 
