--- a/MyAPP/src/app/View/selection/selection.page.html
+++ b/MyAPP/src/app/View/selection/selection.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>selection</ion-title>
+    <ion-title>TeLlevoAPP</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -10,4 +10,20 @@
       <ion-title size="large">selection</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-content>
+    <div>
+      <h1 style="text-align: center;">¡Bienvenid&#64; {{this.username}}!</h1>
+      <h4 style="text-align: center;">¿Qué deseas realizar hoy?</h4>
+      <div id="cont-botones" style="text-align: center; align-items: center;">
+        <div>
+          <ion-button>Facilitar transporte</ion-button>
+        </div>
+        <div>
+          <ion-button>Solicitar transporte</ion-button>
+        </div>
+      </div>
+    </div>
+  </ion-content>
+
 </ion-content>
