--- a/MyAPP/src/app/View/selection/selection.page.html
+++ b/MyAPP/src/app/View/selection/selection.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title>TeLlevoAPP</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -7,7 +10,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">selection</ion-title>
+      <ion-title size="large">TeLlevoAPP</ion-title>
     </ion-toolbar>
   </ion-header>
 
