Avance 02.09 (Vista chofer)
- Avance vista chofer

--- a/MyAPP/src/app/View/selection/selection.page.html
+++ b/MyAPP/src/app/View/selection/selection.page.html
@@ -20,7 +20,7 @@
       <h4 style="text-align: center;">¿Qué deseas realizar hoy?</h4>
       <div id="cont-botones" style="text-align: center; align-items: center;">
         <div>
-          <ion-button>Facilitar transporte</ion-button>
+          <ion-button (click)="chofer()">Facilitar transporte</ion-button>
         </div>
         <div>
           <ion-button>Solicitar transporte</ion-button>
