--- a/MyAPP/src/app/home/home.page.html
+++ b/MyAPP/src/app/home/home.page.html
@@ -35,7 +35,7 @@
             <ion-button (click)="validar()">Ingresar</ion-button>
           </div>
           <div style="display: flex; justify-content: center; margin-top: 10px; margin-bottom: 10px;">
-            <a style="text-align: center; text-decoration: underline;justify-content: center;font-size: small;">¿Olvidó su contraseña?</a>
+            <a href="./rec-pass" style="text-align: center; text-decoration: underline;justify-content: center;font-size: small;">¿Olvidó su contraseña?</a>
           </div>
         </ion-list>
       </ion-card-content>
