--- a/MyAPP/src/app/rec-pass/rec-pass.page.html
+++ b/MyAPP/src/app/rec-pass/rec-pass.page.html
@@ -16,13 +16,16 @@
   <div id="container">
     <ion-card>
       <ion-card-header>
-
+        Recuperar contraseña
       </ion-card-header>
       <ion-card-content>
         <ion-list>
         <ion-item>
-          <ion-input label="Correo" labelplacement="floating" ></ion-input>
+          <ion-input label="Usuario" labelPlacement="floating" placeholder="Coloque su usuario para recuperar contraseña"></ion-input>
         </ion-item>
+        <div>
+          <ion-button> Recuperar </ion-button>
+        </div>
         </ion-list>
       </ion-card-content>
     </ion-card>
