--- a/MyAPP/src/app/View/chofer/chofer.page.html
+++ b/MyAPP/src/app/View/chofer/chofer.page.html
@@ -14,46 +14,36 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-content>
-    <div>
-      <h2 style="text-align: center;">Información Para El Viaje</h2>
-      <p style="text-align: center;">¡Gracias por prestar el auto y ayudar a reducir la huella de carbono 🌍🚗, {{this.username}}!</p>
-      <ion-list style="border-radius: 12px;">
-        <ion-item>
-          <ion-input label="Nombre" labelPlacement="floating" placeholder="Ingrese su nombre"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input label="Apellido" labelPlacement="floating" placeholder="Ingrese su apellido"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-select label="Nivel Educación" label-placement="floating">
-            <ion-select-option value="sined">Sin educación formal</ion-select-option>
-            <ion-select-option value="basica">Básica</ion-select-option>
-            <ion-select-option value="media">Media</ion-select-option>
-            <ion-select-option value="superior">Superior</ion-select-option>
-          </ion-select>
-        </ion-item>
-        <ion-item>
-          <ion-label position="floating">Fecha de Nacimiento</ion-label>
-          <ion-datetime presentation="date" placeholder="Selecciona una fecha"></ion-datetime>
-        </ion-item>
-        <div style="display: flex; justify-content: center; margin-top: 10px; margin-bottom: 10px;">
-          <ion-button style="margin-right: 20px;">Limpiar</ion-button>
-          <ion-button>Mostrar</ion-button>
-        </div>
-        <div style="display: flex; justify-content: center; margin-top: 10px; margin-bottom: 10px;">
-          <a style="text-align: center; text-decoration: underline;justify-content: center;font-size: small;">¿Olvidó su contraseña?</a>
-        </div>
-      </ion-list>
-      <div id="cont-botones" style="text-align: center; align-items: center;">
-        <div>
-          <ion-button>Botón 1</ion-button>
-        </div>
-        <div>
-          <ion-button>Botón 2</ion-button>
-        </div>
-      </div>
-    </div>
-  </ion-content>
+  <div id="container">
+    <ion-card>
+
+      <ion-card-header>
+        <ion-card-title style="color: #FF8C00;">Programación del Viaje</ion-card-title>
+        <ion-card-subtitle>¡Gracias por compartir el auto y ayudar a reducir la huella de carbono 🌍🚗, {{this.username}}!</ion-card-subtitle>
+      </ion-card-header>
+
+      <ion-card-content>
+        <ion-list style="border-radius: 12px;">
+          <ion-item>
+            <ion-input label="Destino" labelPlacement="floating" placeholder="Ingrese el destino"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-input label="Hora de Salida" labelPlacement="floating" placeholder="Ingrese la hora de salida"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-input label="Asientos disponibles" labelPlacement="floating" placeholder="Ingrese el número de asientos por persona"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-input label="Precio por persona" labelPlacement="floating" placeholder="Ingrese el precio por persona"></ion-input>
+          </ion-item>
+          <div id="cont-botones">
+            <ion-button style="margin-right: 20px;">Limpiar</ion-button>
+            <ion-button>Continuar</ion-button>
+          </div>
+        </ion-list>
+      </ion-card-content>
+      
+    </ion-card>
+  </div>
 
 </ion-content>
