--- a/MyAPP/src/app/View/selection/selection.page.html
+++ b/MyAPP/src/app/View/selection/selection.page.html
@@ -10,23 +10,32 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">TeLlevoAPP</ion-title>
+      <ion-title size="large">Selección</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <ion-content>
-    <div>
-      <h1 style="text-align: center;">¡Bienvenid&#64; {{this.username}}!</h1>
-      <h4 style="text-align: center;">¿Qué deseas realizar hoy?</h4>
-      <div id="cont-botones" style="text-align: center; align-items: center;">
+  <div id="container">
+    <ion-card>
+
+      <ion-card-header>
+        <ion-card-title style="color: #FF8C00;">¡Bienvenid&#64;, {{this.username}}!</ion-card-title>
+        <ion-card-subtitle>¿Qué deseas realizar hoy?</ion-card-subtitle>
+      </ion-card-header>
+
+      <ion-card-content>
         <div>
-          <ion-button (click)="chofer()">Facilitar transporte</ion-button>
+          <div id="cont-botones" style="text-align: center; align-items: center;">
+            <div>
+              <ion-button style="margin-right: 20px;" (click)="chofer()">Facilitar transporte</ion-button>
+            </div>
+            <div>
+              <ion-button (click)="pasajero()">Solicitar transporte</ion-button>
+            </div>
+          </div>
         </div>
-        <div>
-          <ion-button>Solicitar transporte</ion-button>
-        </div>
-      </div>
-    </div>
-  </ion-content>
+      </ion-card-content>
+
+    </ion-card>
+  </div>
 
 </ion-content>
