--- a/MyAPP/src/app/home/home.page.html
+++ b/MyAPP/src/app/home/home.page.html
@@ -15,8 +15,9 @@
 
   <div id="container">
     <ion-card>
+
       <ion-card-header>
-        <ion-card-title>Login</ion-card-title>
+        <ion-card-title style="color: #FF8C00;">LOGIN</ion-card-title>
         <ion-card-subtitle>¡Bienvenid&#64;!</ion-card-subtitle>
       </ion-card-header>
     
@@ -34,7 +35,7 @@
           <div style="display: flex; justify-content: center; margin-top: 10px; margin-bottom: 10px;">
             <ion-button (click)="validar()">Ingresar</ion-button>
           </div>
-          <div style="display: flex; justify-content: center; margin-top: 10px; margin-bottom: 10px;">
+          <div id="cont-botones">
             <a [routerLink]="['/rec-pass']" style="text-align: center; text-decoration: underline;justify-content: center;font-size: small;">¿Olvidó su contraseña?</a>
           </div>
         </ion-list>
