--- a/MyAPP/src/global.scss
+++ b/MyAPP/src/global.scss
@@ -35,3 +35,6 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+
+/* CSS Corporativo */
+@import "./theme/tema-corporativo.scss"
