--- a/MyAPP/src/app/View/chofer/chofer.page.html
+++ b/MyAPP/src/app/View/chofer/chofer.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>TeLlevoAPP</ion-title>
+    <ion-title class="tituloApp">TeLlevoAPP</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -36,6 +36,7 @@
           <ion-item>
             <ion-input label="Precio por persona" labelPlacement="floating" placeholder="Ingrese el precio por persona"></ion-input>
           </ion-item>
+          
           <div id="cont-botones">
             <ion-button style="margin-right: 20px;">Limpiar</ion-button>
             <ion-button>Continuar</ion-button>
