--- a/MyAPP/src/app/View/pasajero/pasajero.page.html
+++ b/MyAPP/src/app/View/pasajero/pasajero.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>TeLlevoAPP</ion-title>
+    <ion-title class="tituloApp">TeLlevoAPP</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -25,7 +25,7 @@
         <ion-item style="border-radius: 12px;">
           <ion-label>Selecciona un Viaje</ion-label>
           <ion-select [(ngModel)]="selectedViaje">
-            <ion-select-option *ngFor="let viaje of items" [value]="viaje">
+            <ion-select-option *ngFor="let viaje of items" [value]="viaje" style="color: #FF8C00;">
               {{ viaje.destino }} - ${{ viaje.tarifa }}. Asientos disponibles: {{ viaje.asientosDisp }}
             </ion-select-option>
           </ion-select>
