--- a/MyAPP/src/app/View/selection/selection.page.html
+++ b/MyAPP/src/app/View/selection/selection.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>TeLlevoAPP</ion-title>
+    <ion-title class="tituloApp">TeLlevoAPP</ion-title>
   </ion-toolbar>
 </ion-header>
 
