--- a/MyAPP/src/app/home/home.page.scss
+++ b/MyAPP/src/app/home/home.page.scss
@@ -25,3 +25,17 @@
 // #container a {
 //   text-decoration: none;
 // }
+
+#container .imagenPerfil{
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+#container .imagenPerfil img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 4px solid #FF8C00;
+}
+
