--- a/MyAPP/src/app/registro/registro.page.html
+++ b/MyAPP/src/app/registro/registro.page.html
@@ -23,7 +23,7 @@
 
       <ion-card-content>
         <ion-list style="border-radius: 12px;">
-          <form [formGroup]="usuario" (ngSubmit)="guardarDatos()">
+          <form [formGroup]="usuario" (ngSubmit)="Registrarse()">
             <ion-item>
               <ion-input label="Nombre" labelPlacement="floating" placeholder="Ingrese su nombre de usuario" formControlName="nombre"></ion-input>
             </ion-item>
@@ -32,13 +32,13 @@
                 placeholder="Ingrese su contraseña"></ion-input>
             </ion-item>
             <ion-item>
-              <ion-input label="Confirmar contraseña" labelPlacement="floating" type="password"
+              <ion-input label="Confirmar contraseña" labelPlacement="floating" type="password" formControlName="cclave"
                 placeholder="Ingrese nuevamente su contraseña"></ion-input>
             </ion-item>
           </form>
           <div id="cont-botones">
             <ion-button style="margin-right: 20px;">Limpiar</ion-button>
-            <ion-button (click)="guardarDatos()">Registrarse</ion-button>
+            <ion-button (click)="Registrarse()">Registrarse</ion-button>
           </div>
         </ion-list>
       </ion-card-content>
