--- a/MyAPP/src/app/View/chofer/chofer.page.html
+++ b/MyAPP/src/app/View/chofer/chofer.page.html
@@ -26,7 +26,18 @@
       <ion-card-content>
         <ion-list style="border-radius: 12px;">
           <ion-item>
-            <ion-input label="Destino" labelPlacement="floating" placeholder="Ingrese el destino"></ion-input>
+            <form class="example-form" style="width: 100%;">
+              <mat-form-field class="example-full-width" style="width: 100%;">
+                <mat-label>Destino</mat-label>
+                <input type="text" placeholder="Elige una opción" aria-label="Destino" matInput [formControl]="myControl"
+                  [matAutocomplete]="auto">
+                <mat-autocomplete #auto="matAutocomplete">
+                  <mat-option *ngFor="let option of options" [value]="option">
+                    {{ option }}
+                  </mat-option>
+                </mat-autocomplete>
+              </mat-form-field>
+            </form>
           </ion-item>
           <ion-item>
             <ion-input label="Hora de Salida" labelPlacement="floating"
@@ -46,18 +57,6 @@
             <ion-button>Continuar</ion-button>
           </div>
         </ion-list>
-        <form class="example-form">
-          <mat-form-field class="example-full-width">
-            <mat-label>Number</mat-label>
-            <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl"
-              [matAutocomplete]="auto">
-            <mat-autocomplete #auto="matAutocomplete">
-              @for (option of options; track option) {
-              <mat-option [value]="option">{{option}}</mat-option>
-              }
-            </mat-autocomplete>
-          </mat-form-field>
-        </form>
       </ion-card-content>
 
     </ion-card>
