--- a/MyAPP/src/app/home/home.page.html
+++ b/MyAPP/src/app/home/home.page.html
@@ -27,7 +27,7 @@
         </div>
         <ion-list style="border-radius: 12px;">
           <ion-item>
-            <ion-input label="usuario" [(ngModel)]="user.username" labelPlacement="floating" placeholder="Ingrese su usuario"></ion-input>
+            <ion-input label="Usuario" [(ngModel)]="user.username" labelPlacement="floating" placeholder="Ingrese su usuario"></ion-input>
           </ion-item>
           <ion-item>
             <ion-input label="Contraseña" [(ngModel)]="user.password" labelPlacement="floating" placeholder="Ingrese su contraseña" type="password"></ion-input>
