--- a/MyAPP/src/app/home/home.page.html
+++ b/MyAPP/src/app/home/home.page.html
@@ -42,7 +42,7 @@
             <a [routerLink]="['/rec-pass']" style="text-align: center; text-decoration: underline;justify-content: center;font-size: small;">¿Olvidó su contraseña?</a>
           </div>
           <div id="cont-botones">
-            <a [routerLink]="['/registro']" style="text-align: center; text-decoration: underline;justify-content: center;font-size: small;">¡ Registrese aqui !</a>
+            <a [routerLink]="['/registro']" style="text-align: center; text-decoration: underline;justify-content: center;font-size: small;">Registrarse</a>
           </div>
         </ion-list>
       </ion-card-content>
