--- a/MyAPP/src/app/home/home.page.html
+++ b/MyAPP/src/app/home/home.page.html
@@ -36,7 +36,7 @@
               <p style="text-align: center;justify-content: center;font-size: small; color: red;">{{mensaje}}</p>
             </div>
           <div style="display: flex; justify-content: center; margin-top: 10px; margin-bottom: 10px;">
-            <ion-button (click)="validar()">Ingresar</ion-button>
+            <ion-button (click)="validarBDD()">Ingresar</ion-button>
           </div>
           <div id="cont-botones">
             <a [routerLink]="['/rec-pass']" style="text-align: center; text-decoration: underline;justify-content: center;font-size: small;">¿Olvidó su contraseña?</a>
